Bug 464159 - Quickstubs leaks IIDs. r=jorendorff